k8s/helloapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello1
  labels:
    app: hello
spec:
  containers:
  - name: myapp
    image: gcr.io/google-samples/hello-app:1.0

---

apiVersion: v1
kind: Pod
metadata:
  name: hello2
  labels:
    app: hello
spec:
  containers:
  - name: myapp
    image: gcr.io/google-samples/hello-app:1.0

---
apiVersion: v1
kind: Pod
metadata:
  name: hello3
  labels:
    app: hello
spec:
  containers:
  - name: myapp
    image: gcr.io/google-samples/hello-app:1.0

---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
