k8s/hellov1svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-v1
spec:
  selector:
    app: hello-v1
  ports:
  - port: 80
    targetPort: 8080
