k8s/hellov2svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-v2
spec:
  selector:
    app: hello-v2
  ports:
  - port: 80
    targetPort: 8080
