k8s/mynginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
