k8s/mynginxnp.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginxnp
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
