k8s/router.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello-v1
  ports:
  - port: 80
    targetPort: 8080
